[package]

name = "sarosa"
version = "0.0.1"
authors = [
    "Nemikolh",
    "Vaelden <maugan.villatel@gmail.com>",
]
build = "build.rs"

[features]
profiler = ["sarosa_engine/profiler"]

[dependencies]
log4rs = "*"
docopt = "0.6.*"
rustc-serialize = "0.3"
smallvec = "*"

[dependencies.sarosa_engine]
path = "./sarosa_engine"
version = "=0.0.1"
