[package]

name = "sarosa_engine"
version = "0.0.1"
authors = ["The GreenPix developers"]

[dependencies]
# oil = "*"
glutin = "*"
image = "*"
clock_ticks = "*"
cgmath = "*"
rand = "*"
num = "*"
log = "*"

[dependencies.glium]
version = "*"
features = ["glutin", "image", "cgmath"]
default-features = false

[dependencies.sarosa-net]
git = "ssh://git@gitlab.com:22/slayers-online/sarosa-net.git"
