[package]

name = "sarosa_engine"
version = "0.0.1"
authors = ["The GreenPix developers"]

[dependencies]
# oil = "*"
glutin = "*"
image = "*"
clock_ticks = "*"
cgmath = "*"
rand = "*"
num = "*"
log = "*"

[features]
profiler = ["hprof"]

[dependencies.hprof]
git = "https://github.com/cmr/hprof.git"
optional = true

[dependencies.glium]
version = "*"
features = ["glutin"]
default-features = false

[dependencies.sarosa-net]
git = "https://github.com/GreenPix/sarosa-net.git"
